--- a/CharityPlatform/appsettings.json
+++ b/CharityPlatform/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CharityPlatform;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-5D486TR\\MSSQLSERVER01;Database=CharityPlatform;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
